Adicionado subcategorias de Produção técnica
*Produtos tecnólogicos

*Processos ou técnicas

*Patente

*Trabalhos técnicos

--- a/exemplo/teste-01.config
+++ b/exemplo/teste-01.config
@@ -6,8 +6,8 @@ global-arquivo_de_entrada                 = ./exemplo/teste-01.list
 global-diretorio_de_saida                 = ./exemplo/teste-01/
 global-email_do_admin                     = admin@email.com
 global-idioma                             = PT    # ainda não implementada na versão Python
-global-itens_desde_o_ano                  = 2010  # se não for indicado o ano então serão consideradas as publicações
-global-itens_ate_o_ano                    = 2018
+global-itens_desde_o_ano                  = 2000  # se não for indicado o ano então serão consideradas as publicações
+global-itens_ate_o_ano                    = 2021
 global-itens_por_pagina                   = 1000
 global-criar_paginas_jsp                  = nao
 global-google_analytics_key               = UA-5266248-1  # usado com contas do google analytics
@@ -66,6 +66,7 @@ relatorio-incluir_orientacao_concluida_monografia_de_especializacao    = sim
 relatorio-incluir_orientacao_concluida_tcc                             = sim
 relatorio-incluir_orientacao_concluida_iniciacao_cientifica            = sim
 relatorio-incluir_orientacao_concluida_outro_tipo                      = sim
+relatorio-incluir_patente			                         = sim
 
 # ---------------------------------------------------------------------------- #
 # RELATÓRIOS ADICIONAIS                                                        #
