Adicionado subcategorias Curso de curta duração e Desenvolvimento de material didático

--- a/exemplo/teste-01.config
+++ b/exemplo/teste-01.config
@@ -1,7 +1,7 @@
 # ---------------------------------------------------------------------------- #
 # scriptLattes                                                                 #
 # ---------------------------------------------------------------------------- #
-global-nome_do_grupo                      = teste-01
+global-nome_do_grupo                      = PPGTGS - Programa de Pós-Graduação em Tecnologia, Gestão e Sustentabilidade
 global-arquivo_de_entrada                 = ./exemplo/teste-01.list
 global-diretorio_de_saida                 = ./exemplo/teste-01/
 global-email_do_admin                     = admin@email.com
@@ -39,10 +39,13 @@ relatorio-incluir_outro_tipo_de_producao_bibliografica = sim
 
 relatorio-incluir_software_com_patente                 = sim
 relatorio-incluir_software_sem_patente                 = sim
+relatorio-incluir_apresentacao_de_trabalho_tecnico	 = sim
 relatorio-incluir_produto_tecnologico                  = sim
 relatorio-incluir_processo_ou_tecnica                  = sim
 relatorio-incluir_trabalho_tecnico                     = sim
 relatorio-incluir_outro_tipo_de_producao_tecnica       = sim
+relatorio-incluir_curso_de_curta_duracao_ministrado	 = sim
+relatorio-incluir_desenvolvimento_de_material_didatico_ou_instrucional = sim
 
 relatorio-incluir_producao_artistica                   = sim
 
@@ -66,7 +69,7 @@ relatorio-incluir_orientacao_concluida_monografia_de_especializacao    = sim
 relatorio-incluir_orientacao_concluida_tcc                             = sim
 relatorio-incluir_orientacao_concluida_iniciacao_cientifica            = sim
 relatorio-incluir_orientacao_concluida_outro_tipo                      = sim
-relatorio-incluir_patente			                         = sim
+relatorio-incluir_patente						  = sim
 
 # ---------------------------------------------------------------------------- #
 # RELATÓRIOS ADICIONAIS                                                        #
@@ -97,10 +100,13 @@ grafo-incluir_outro_tipo_de_producao_bibliografica          = sim
 
 grafo-incluir_software_com_patente                          = sim
 grafo-incluir_software_sem_patente                          = sim
+grafo-incluir_apresentacao_de_trabalho_tecnico	      = sim
 grafo-incluir_produto_tecnologico                           = sim
 grafo-incluir_processo_ou_tecnica                           = sim
 grafo-incluir_trabalho_tecnico                              = sim
 grafo-incluir_outro_tipo_de_producao_tecnica                = sim
+grafo-incluir_curso_de_curta_duracao_ministrado	      = sim
+grafo-incluir_desenvolvimento_de_material_didatico_ou_instrucional = sim
 
 grafo-incluir_producao_artistica                            = sim
 grafo-incluir_grau_de_colaboracao                           = sim  # medida similar ao PageRank
