--- a/exemplo/teste-01/producao-com-colaboradores.config
+++ b/exemplo/teste-01/producao-com-colaboradores.config
@@ -1,4 +1,4 @@
-global-nome_do_grupo                                         = teste-01 + Colaboradores na Plataforma Lattes
+global-nome_do_grupo                                         = PPGTGS - Programa de Pós-Graduação em Tecnologia, Gestão e Sustentabilidade + Colaboradores na Plataforma Lattes
 global-arquivo_de_entrada                                    = ./exemplo/teste-01//producao-com-colaboradores.list
 global-diretorio_de_saida                                    = ./exemplo/teste-01//producao-com-colaboradores/
 global-email_do_admin                                        = admin@email.com
@@ -32,6 +32,8 @@ relatorio-incluir_produto_tecnologico                        = sim
 relatorio-incluir_processo_ou_tecnica                        = sim
 relatorio-incluir_trabalho_tecnico                           = sim
 relatorio-incluir_outro_tipo_de_producao_tecnica             = sim
+relatorio-incluir_curso_de_curta_duracao_ministrado          = sim
+relatorio-incluir_desenvolvimento_de_material_didatico_ou_instrucional = sim
 relatorio-incluir_patente                                    = sim
 relatorio-incluir_programa_computador                        = sim
 relatorio-incluir_desenho_industrial                         = sim
@@ -76,6 +78,8 @@ grafo-incluir_produto_tecnologico                            = sim
 grafo-incluir_processo_ou_tecnica                            = sim
 grafo-incluir_trabalho_tecnico                               = sim
 grafo-incluir_outro_tipo_de_producao_tecnica                 = sim
+grafo-incluir_curso_de_curta_duracao_ministrado              = sim
+grafo-incluir_desenvolvimento_de_material_didatico_ou_instrucional = sim
 grafo-incluir_patente                                        = sim
 grafo-incluir_programa_computador                            = sim
 grafo-incluir_desenho_industrial                             = sim
