Adicionado subcategoria Oraganização de evento

--- a/exemplo/teste-01.config
+++ b/exemplo/teste-01.config
@@ -46,6 +46,7 @@ relatorio-incluir_trabalho_tecnico                     = sim
 relatorio-incluir_outro_tipo_de_producao_tecnica       = sim
 relatorio-incluir_curso_de_curta_duracao_ministrado	 = sim
 relatorio-incluir_desenvolvimento_de_material_didatico_ou_instrucional = sim
+relatorio-incluir_organizacao_de_evento      		 = sim
 
 relatorio-incluir_producao_artistica                   = sim
 
@@ -77,7 +78,7 @@ relatorio-incluir_patente						  = sim
 relatorio-incluir_projeto                    = sim
 relatorio-incluir_premio                     = sim
 relatorio-incluir_participacao_em_evento     = sim
-relatorio-incluir_organizacao_de_evento      = sim
+#relatorio-incluir_organizacao_de_evento      = sim
 
 # ---------------------------------------------------------------------------- #
 # GRAFO DE COLABORAÇÕES                                                        #
@@ -107,6 +108,7 @@ grafo-incluir_trabalho_tecnico                              = sim
 grafo-incluir_outro_tipo_de_producao_tecnica                = sim
 grafo-incluir_curso_de_curta_duracao_ministrado	      = sim
 grafo-incluir_desenvolvimento_de_material_didatico_ou_instrucional = sim
+grafo-incluir_organizacao_de_evento      		      = sim
 
 grafo-incluir_producao_artistica                            = sim
 grafo-incluir_grau_de_colaboracao                           = sim  # medida similar ao PageRank
